Front page centered

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <head>
     <title> FCSS </title>
     <link rel="stylesheet" type="text/css" href="./main_page.css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">  </head>
 
   <body>
     <h1> Fully Comprehensible Supervision System </h1>
