--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <title> FCSS </title>
     <link rel="stylesheet" type="text/css" href="./main_page.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">  </head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="main_page.js"></script>
 
   <body>
     <h1> Fully Comprehensible Supervision System </h1>
+
+    <nav class="nav">
+      <a href="#" class="nav-item is-active" active-color="orange">Home</a>
+      <a href="#" class="nav-item" active-color="green">About</a>
+      <a href="#" class="nav-item" active-color="blue">Sign Up</a>
+      <a href="#" class="nav-item" active-color="red">Calendar</a>
+      <span class="nav-indicator"></span>
+    </nav>
+
+    <div class="content">
+      <div class="slider-wrapper">
+          Organising supervisions for 
+          <div class="slider">
+              <div class="slider-text1"> students </div>
+              <div class="slider-text2"> supervisors </div>
+              <div class="slider-text3"> lecturers </div>
+          </div>
+      </div>
+  </div>
+
   </body>
 
 
