--- a/form_page.html
+++ b/form_page.html
@@ -21,25 +21,37 @@
       <span class="nav-indicator"></span>
     </nav>
 
+    <div class="main-agileinfo">
+        <div class = 'agileits-top'>
+            <form action="#" method="post">
+                <ul class='flex_inner'>
+                    <li>
+                        <input class="text" type="text" name="Username" placeholder="Username" required="">
+                    </li>
+                    <li>
+                        <input class="text email" type="email" name="email" placeholder="Email" required="">
+                    </li>
+                    <li>
+                        <input class="text" type="password" name="password" placeholder="Password" required="">
+                    </li>
+                    <li>
+                        <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
+                    </li>
 
-        <div class="main-agileinfo">
-            <div class = 'agileits-top'>
-                <form action="#" method="post">
-                    <input class="text" type="text" name="Username" placeholder="Username" required="">
-                    <input class="text email" type="email" name="email" placeholder="Email" required="">
-                    <input class="text" type="password" name="password" placeholder="Password" required="">
-                    <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
-                    <div class="wthree-text">
-                        <label class="anim">
-                            <input type="checkbox" class="checkbox" required="">
-                            <span>I Agree To The Terms & Conditions</span>
-                        </label>
-                        <div class="clear"> </div>
-                    </div>
-                    <input type="submit" value="SIGNUP">
-                </form>
-            </div>
+                </ul>
+
+
+                <div class="wthree-text">
+                    <label class="anim">
+                        <input type="checkbox" class="checkbox" required="">
+                        <span>I Agree To The Terms & Conditions</span>
+                    </label>
+                    <div class="clear"> </div>
+                </div>
+                <input type="submit" value="SIGNUP">
+            </form>
         </div>
+    </div>
 
 
 
