smol calendar changes

--- a/calendar.html
+++ b/calendar.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Fully Comprehensible Supervision System - Calendar</h1>
     <div class="month">
-        <ul>
+        <ul class='m'>
             <li class="prev">&#10094;</li>
             <li class="next">&#10095;</li>
             <li id="month_name">
@@ -73,6 +73,208 @@
         <li id='d31'><span class='inactive'>31</span></li>
     </ul>
 
+    <span id='day_title'>Choose a subject:
+    <select id="subjects" name="subjects">
+        <option value="3f1">3F1</option>
+        <option value="3f3">3F3</option>
+        <option value="3f7">3F7</option>
+        <option value="3f8">3F8</option>
+        <option value="3g1">3G1</option>
+        <option value="3g3">3G3</option>
+        <option value="3g4">3G4</option>
+        <option value="3m1">3M1</option>
+        <option value="3e3">3E3</option>
+        <option value="3e11">3E11</option>
+      </select>
+    </span>
+
+    <table>
+        <div id='day_title'>SCHEDULE</div>
+        <div class='cal'>
+            <tr class='cols'>
+                <th></th>
+                <td>STUDENT AVAILABLE</td>
+                <td>SUPERVISOR AVAILABLE</td>
+                <td>COMMON TIMES</td>
+                <td>SUPERVISIONS</td>
+            </tr>
+            <tr>
+                <th>09:00</th>
+                <!-- <td rowspan='5' class="stage-green"></td> -->
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>09:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>10:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>10:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>11:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>11:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>12:00</th>
+                <!-- <td rowspan="6" class="stage-purple"></td>
+                <td rowspan="2" class='stage-blue'></td> -->
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>12:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>13:00</th>
+                <!-- <td class='stage-orange'></td> -->
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>13:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>14:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>14:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>15:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>15:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <th>16:00</th>
+                <!-- <td rowspan='3' class="stage-green"></td>
+                    <td class="stage-blue"></td> -->
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>16:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>17:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>17:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>18:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>18:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>19:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>19:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>20:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>20:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </div>
+    </table>
 </body>
 
 </html>
