--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1> Fully Comprehensible Supervision System </h1>
 
     <nav class="nav">
-      <a href="#" class="nav-item is-active" active-color="orange">Home</a>
-      <a href="#" class="nav-item" active-color="green">About</a>
+      <a href="#" class="nav-item" active-color="orange">Home</a>
+      <a href="#" class="nav-item" id="aboutID" active-color="green">About</a>
       <a href="form_page.html" class="nav-item" active-color="blue">Sign Up</a>
-      <a href="#" class="nav-item" active-color="red">Calendar</a>
+      <a href="calendar.html" class="nav-item" active-color="red">Calendar</a>
       <span class="nav-indicator"></span>
     </nav>
 
