before we mess around

--- a/form_page.html
+++ b/form_page.html
@@ -17,54 +17,34 @@
       <a href="index.html" class="nav-item is-active" active-color="orange">Home</a>
       <a href="#" class="nav-item" active-color="green">About</a>
       <a href="form_page.html" class="nav-item" active-color="blue">Sign Up</a>
-      <a href="#" class="nav-item" active-color="red">Calendar</a>
+      <a href="calendar.html" class="nav-item" active-color="red">Calendar</a>
       <span class="nav-indicator"></span>
     </nav>
 
-    <div class="main-agileinfo">
-        <div class = 'agileits-top'>
-            <form action="#" method="post">
-                <ul class='flex_inner'>
-                    <li>
-                        <input class="text" type="text" name="Username" placeholder="Username" required="">
-                    </li>
-                    <li>
-                        <input class="text email" type="email" name="email" placeholder="Email" required="">
-                    </li>
-                    <li>
-                        <input class="text" type="password" name="password" placeholder="Password" required="">
-                    </li>
-                    <li>
-                        <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
-                    </li>
+    <div class="flex_outer">
+        <form action="#" method="post">
+            <ul class='flex_inner'>
+                <li>
+                    <input class="text" type="text" name="Username" placeholder="Username" required="">
+                </li>
+                <li>
+                    <input class="text email" type="email" name="email" placeholder="Email" required="">
+                </li>
+                <li>
+                    <input class="text" type="password" name="password" placeholder="Password" required="">
+                </li>
+                <li>
+                    <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
+                </li>
+                <li>
+                    <input type="submit" value="SIGNUP">
+                </li>
 
-                </ul>
+            </ul>
 
-
-                <div class="wthree-text">
-                    <label class="anim">
-                        <input type="checkbox" class="checkbox" required="">
-                        <span>I Agree To The Terms & Conditions</span>
-                    </label>
-                    <div class="clear"> </div>
-                </div>
-                <input type="submit" value="SIGNUP">
-            </form>
-        </div>
+        </form>
     </div>
 
-
-
-
-
 </body>
-
-
-
-
-
-
-
-
 
 </html>
