--- a/form_page.html
+++ b/form_page.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">  </head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <script src="./main_page.js"></script>
+
     <style> 
         ::placeholder { /* Firefox, Chrome, Opera */ 
             color: #4892f393; 
@@ -28,7 +30,7 @@
 
     <nav class="nav">
       <a href="index.html" class="nav-item is-active" active-color="orange">Home</a>
-      <a href="#" class="nav-item" active-color="green">About</a>
+      <a href="#" class="nav-item" id="aboutID" active-color="green">About</a>
       <a href="form_page.html" class="nav-item" active-color="blue">Sign Up</a>
       <a href="calendar.html" class="nav-item" active-color="red">Calendar</a>
       <span class="nav-indicator"></span>
