Github issue with images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
   </div>
 
-  <img id='myImage' src='student.JPG' class='student_image'>
+  <!-- <img id='myImage' src='student.JPG' class='student_image'> -->
 
   </body>
 
