--- a/calendar.html
+++ b/calendar.html
@@ -121,7 +121,7 @@
             <tr>
                 <th>09:00</th>
                 <!-- <td rowspan='5' class="stage-green"></td> -->
-                <td></td>
+                <td class='stage-green' rowspan="5"></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -131,32 +131,25 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>10:00</th>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>10:30</th>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class='stage-blue' rowspan="15"></td>
+                <td class='stage-purple' rowspan="2"></td>
                 <td></td>
             </tr>
             <tr>
                 <th>11:00</th>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>11:30</th>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -168,11 +161,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>12:30</th>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -183,11 +174,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>13:30</th>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -197,28 +186,21 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>14:30</th>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>15:00</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class='stage-green' rowspan='10'></td>
+                <td class='stage-purple' rowspan='6'></td>
+                <td class='stage-orange' rowspan="2"></td>
             </tr>
             <tr>
                 <th>15:30</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
             </tr>
 
             <tr>
@@ -226,41 +208,26 @@
                 <!-- <td rowspan='3' class="stage-green"></td>
                     <td class="stage-blue"></td> -->
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>16:30</th>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th>17:00</th>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>17:30</th>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th>18:00</th>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>18:30</th>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -270,11 +237,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th>19:30</th>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
